--- a/app/src/main/res/layout/activity_build_message.xml
+++ b/app/src/main/res/layout/activity_build_message.xml
@@ -9,47 +9,72 @@
     tools:layout_editor_absoluteX="0dp">
 
 
-
     <Spinner
         android:id="@+id/frequency_spinner"
         android:layout_width="178dp"
         android:layout_height="34dp"
+        android:layout_marginStart="8dp"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent" />
     <EditText
         android:id="@+id/message"
         android:hint="@string/message_hint"
         android:maxLength="250"
         android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:lines="3"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:gravity="top|left"
+        android:maxLines="3"
         android:inputType=
             "textCapSentences|textAutoCorrect|textMultiLine"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="220dp"
+        android:background="@android:color/holo_green_dark"
+        android:backgroundTint="@android:color/holo_green_dark"
+        android:onClick="onClickSelectContact"
+        android:text="Select a Contact"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginLeft="8dp" />
 
-    <Button android:layout_width="0dp"
+    <Button
+        android:id="@+id/button_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select a Contact"
-        android:onClick="onClickSelectContact"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
+        android:text="Set Date"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_time"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:onClick="onClickDatePick"/>
+
+    <Button
+        android:id="@+id/button_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set time"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="54dp"
+        app:layout_constraintTop_toBottomOf="@+id/frequency_spinner"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/button_date"
+        android:onClick="onClickTimePick"/>
+
 
 </android.support.constraint.ConstraintLayout>
