--- a/app/src/main/res/layout/activity_build_message.xml
+++ b/app/src/main/res/layout/activity_build_message.xml
@@ -67,7 +67,7 @@
         android:id="@+id/button_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set time"
+        android:text="Set hour"
         tools:layout_constraintTop_creator="1"
         android:layout_marginStart="8dp"
         android:layout_marginTop="54dp"
