--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,11 @@
         app:rippleColor="@android:color/background_dark"
         app:srcCompat="@android:drawable/ic_input_add" />
 
+    <ListView
+        android:id="@+id/message_list_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+    </ListView>
+
+
 </android.support.design.widget.CoordinatorLayout>
